<?xml version="1.0"?>
<package format="2">
  <name>path_planner</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="perezsaura.david@gmail.com">cvar</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend> 
  <depend>geometry_msgs</depend> 
  <depend>trajectory_msgs</depend> 
  <depend>cv_bridge</depend>
  <!-- <depend>backward_ros</depend> -->
  <depend>tf</depend>
  <depend>laser_geometry</depend>
  <depend>image_transport</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  
  <export></export>
  
</package>
