<?xml version="1.0"?>
<package format="2">
  <name>icuas_path_planner</name>
  <version>0.0.0</version>
  <description>TODO</description>

  <maintainer email="cvar.upm3@gmail.com">CVAR-UPM</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend> 
  <depend>geometry_msgs</depend> 
  <depend>trajectory_msgs</depend> 
	<depend>mav_msgs</depend>
  <depend>icuas_msgs</depend>
	<depend>tf2_ros</depend>
  
</package>